Lunch time tweaks to css, esp. print versions.

--- a/WebApplication/Views/Shared/_Layout.cshtml
+++ b/WebApplication/Views/Shared/_Layout.cshtml
@@ -33,7 +33,7 @@
         @RenderSection("SPAViews", required: false)
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - Larry D. Collins Jr. <a href="http://larrydanna.com" target="_blank">LarryDanna.com, a personal website.</a></p>
+            <p>&copy; @DateTime.Now.Year - instArranger.com</p>
         </footer>
     </div>
 
