--- a/WebApplication/Views/Shared/_Layout.cshtml
+++ b/WebApplication/Views/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("instArranger", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("instArranger beta-16.2", "Index", "Editor", new { area = "" }, new { @class = "navbar-brand" }) h
             </div>
             @*<div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
@@ -33,7 +33,7 @@
         @RenderSection("SPAViews", required: false)
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - instArranger.com</p>
+            <p>&copy; @DateTime.Now.Year - instArranger.com beta-16.2</p>
         </footer>
     </div>
 
