--- a/WebApplication/Views/Editor/_sampleInput-RovingEyes.cshtml
+++ b/WebApplication/Views/Editor/_sampleInput-RovingEyes.cshtml
@@ -6,7 +6,7 @@ Time: 2/4
 
 Intro:
 1 7 4 1
-1 6 2 5
+1 6m 2 5
 1 7 4 1
 1 1 5 1 1 1
 
@@ -18,7 +18,7 @@ Ch:
 
 Verse:
 1 7 4 1
-1 6 2 5 5
+1 6m 2 5 5
 1 7 4 1
 1 1 5 1 1
 
@@ -28,16 +28,17 @@ Ch:
 1 1 1 1 4 1 1
 1 1 5 1 1
 
-Break (Banjo):
+Break 1st-half (Banjo):
 1 7 4 1
 1 6 2 5 5
-Break (Dobro):
+
+Break 2nd-half (Dobro):
 1 7 4 1
 1 1 5 1 1
 
 Verse:
 1 7 4 1
-1 6 2 5 5
+1 6m 2 5 5
 1 7 4 1
 1 1 5 1 1
 
