--- a/WebApplication/Views/Editor/_sampleInput-TwelveBarBlues.cshtml
+++ b/WebApplication/Views/Editor/_sampleInput-TwelveBarBlues.cshtml
@@ -1,62 +1,53 @@
-﻿Title: Twelve + 4 Bar Blues
+﻿title: bad song blues
 
-Key: G
-Tempo: 120
-Time: 6/8
+key: f#
+tempo: 120
+time: 6/8
 
-Intro:
+intro:
 1 1 5 5
-4 4 1 1
+4 4m 1 1
 5 5 1 1
 
-Verse:
+verse:
+1 1 1 1
+4 4m 4 4
+1 5 4 1
+1 5 5 1
+
+chorus:
 1 1 1 1
 4 4 4 4
 1 5 4 1
 1 5 5 1
 
-Chorus:
+verse:
+1 1 1 1
+4 4m 4 4
+1 5 4 1
+1 5 5 1
+
+chorus:
 1 1 1 1
 4 4 4 4
 1 5 4 1
 1 5 5 1
 
-Verse:
+verse:
 1 1 1 1
-4 4 4 4
+4 4m 4 4
 1 5 4 1
 1 5 5 1
-.
-.
-.
-.
-.
 
-Chorus:
+chorus:
 1 1 1 1
 4 4 4 4
 1 5 4 1
 1 5 5 1
 
-Verse:
-1 1 1 1
-4 4 4 4
-1 5 4 1
-1 5 5 1
-
-Chorus:
-1 1 1 1
-4 4 4 4
-1 5 4 1
-1 5 5 1
-
-Outtro:
+outtro:
 1 5 5 4
 4 1 1 1
 <1>
-.
-.
-Here are some
-notes about all of
-this...
 
+notes: You can add notes as well. Notice the special fields (Title, Key, Tempo, Time & Notes).  This app will look for a colon (':') to figure out what you mean.  Print this page from your browser.  Tip: Printing to PDF may produce better results.
