--- a/WebApplication/Views/Editor/_sampleOutput.cshtml
+++ b/WebApplication/Views/Editor/_sampleOutput.cshtml
@@ -7,5 +7,6 @@
         <div class="song-header-clear">&nbsp;</div>
     </div>
     <div class="song-sections">{arrangement}</div>
+    <div class="song-notes">{notes}</div>
 </div>
 
