updated javascript to new patterns

--- a/WebApplication/Views/Editor/Index.cshtml
+++ b/WebApplication/Views/Editor/Index.cshtml
@@ -6,7 +6,7 @@
 <div class="container">
     <div id="divInput">
         <h3>Editor</h3>
-        <textarea id="textEditor">@Html.Partial("_sampleInput-RovingEyes")</textarea>
+        <textarea id="textEditor">@Html.Partial("_sampleInput-TwelveBarBlues")</textarea>
     </div>
     <div id="divOutput"></div>
 </div>
