--- a/WebApplication/Views/Editor/_sampleInput-TwelveBarBlues.cshtml
+++ b/WebApplication/Views/Editor/_sampleInput-TwelveBarBlues.cshtml
@@ -1,4 +1,4 @@
-﻿title: bad song blues
+﻿title: lead sheet blues
 
 key: f#
 tempo: 120
@@ -50,4 +50,4 @@ outtro:
 4 1 1 1
 <1>
 
-notes: You can add notes as well. Notice the special fields (Title, Key, Tempo, Time & Notes).  This app will look for a colon (':') to figure out what you mean.  Print this page from your browser.  Tip: Printing to PDF may produce better results.
+notes: Welcome to the easy Nashville number system lead sheet editor.  You can add notes as well. Notice the special fields (Title, Key, Tempo, Time & Notes).  This app will look for a colon (':') to figure out what you mean.  Printing Tip: Print to PDF may produce better results.
