--- a/WebApplication/Views/Shared/_Layout.cshtml
+++ b/WebApplication/Views/Shared/_Layout.cshtml
@@ -2,11 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="utf-8" />
-    <title>@ViewBag.Title</title>
+    <title>@ViewBag.Title - Nashville Number System Lead Sheet Editor</title>
     <link href='https://fonts.googleapis.com/css?family=Droid+Sans:400,700' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Cutive+Mono' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Coming+Soon' rel='stylesheet' type='text/css'>
     <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
+    <script src="https://rawgit.com/larrydanna/js/master/array.polyfill.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
@@ -20,15 +21,23 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("instArranger beta-16.2", "Index", "Editor", new { area = "" }, new { @class = "navbar-brand" }) h
+                @Html.ActionLink("instArranger beta-16.2", "Index", "Editor", new { area = "" }, new { @class = "navbar-brand" })
+
             </div>
-            @*<div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home", new { area = "" }, null)</li>
-                    <li>@Html.ActionLink("API", "Index", "Help", new { area = "HelpPage" }, null)</li>
+            <div class="navbar-collapse collapse">
+                <ul class="nav navbar-nav" style="float: right; width: 33%;">
+                    <li class="dropdown">
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                            References
+                            <span class="caret"></span>
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a href="http://nashvillenumbersystem.com/SOP.html" target="_blank">Live Example</a></li>
+                            <li><a href="https://en.wikipedia.org/wiki/Nashville_number_system" target="_blank">Nashville Number System (Wikipedia)</a></li>
+                        </ul>
+                    </li>                    
                 </ul>
-                @Html.Partial("_LoginPartial")
-            </div>*@
+            </div>
         </div>
     </div>
     <div class="container body-content">
