--- a/WebApplication/Views/Editor/_sampleInput-TwelveBarBlues.cshtml
+++ b/WebApplication/Views/Editor/_sampleInput-TwelveBarBlues.cshtml
@@ -50,4 +50,4 @@ outtro:
 4 1 1 1
 <1>
 
-notes: Welcome to the easy Nashville number system chart editor.  STEP #1 is to replace the example in the Editor section with your song.  Notice the special fields (Title, Key, Tempo, Time & Notes).  This app will look for a colon (':') to figure out what you mean.  STEP #2, print form your browser.  Printing Tip: Print to PDF may produce better results.
+notes: Welcome to the easy Nashville number system chart editor.  STEP #1 is to replace the example in the Editor section with your song.  Notice the special fields (Title, Key, Tempo, Time & Notes).  This app will look for a colon (':') to figure out what you mean.  STEP #2, print from your browser.  Printing Tip: Print to PDF may produce better results.
